--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,6 +7,12 @@
       <header-container>
         <header-container-contents>
           <ul>
+            <% if user_signed_in? %>
+            <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
+            <%= link_to  "ログアウト",  destroy_user_session_path, method: :delete %>
+            <% else %>
+            <%= link_to "ログイン", new_user_session_path, method: :get %>
+            <% end %>
             <a href="about.html">
               <li>about</li>
             </a>
