--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -33,7 +33,7 @@
       <form>
         <input type="text" id="address">
         <button id="search">Search</button>
-        <div id= about>
+        <div id= about class= "hidden">
         <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
         </div>
       </form>
