各地域のボタンのビュー変更

--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -115,8 +115,9 @@ form {
   border:1px solid #fff;
   bottom: 32px;
   right: 32px;
-  padding: 15px;
+  padding: 15px 0;
   margin-bottom:20px;
+  cursor:pointer;
 }
 
 // #search
