--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -43,15 +43,16 @@
       <% @places.each do |place|%>
       <div class= "place hidden"><%= place.address%></div>
       <div class= "name hidden">
-        <%= link_to "#" do%>
+        <%= link_to place_path(place.id), method: :get do%>
           <%= place.name%></div>
         <% end %>
       <% end %>
       <div class="direction">
-        <div class="sample btn" >北海道方面はこちら</div>
-        <div class="sample btn" onclick="initMap(../javascript/map)">東京方面はこちら</div>
-        <div class="sample btn">大阪方面はこちら</div>
-        <div class="sample btn">九州方面はこちら</div>
+        <div class="btn" ><span class="sample">北海道</span>方面はこちら</div>
+        <div class="btn" ><span class="sample">仙台</span>方面はこちら</div>
+        <div class="btn" ><span class="sample">東京</span>方面はこちら</div>
+        <div class="btn"><span class="sample">大阪</span>方面はこちら</div>
+        <div class="btn"><span class="sample">九州</span>方面はこちら</div>
       </div>
     </main-contents>
   </main>
