--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,4 +4,5 @@
 <%= @place.available_time%>
 <%= @place.price%>
 
+<%= link_to "ここの情報を編集する", edit_place_path, method: :get %>
 <%= link_to "トップページへ戻る" ,root_path %>
