--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -48,11 +48,11 @@
         <% end %>
       <% end %>
       <div class="direction">
-        <div class="btn" ><span class="sample">北海道</span>方面はこちら</div>
-        <div class="btn" ><span class="sample">仙台</span>方面はこちら</div>
-        <div class="btn" ><span class="sample">東京</span>方面はこちら</div>
-        <div class="btn"><span class="sample">大阪</span>方面はこちら</div>
-        <div class="btn"><span class="sample">九州</span>方面はこちら</div>
+        <div class="sample btn" ><span class="sample">北海道</span>方面はこちら</div>
+        <div class="sample btn" ><span class="sample">仙台</span>方面はこちら</div>
+        <div class="sample btn" ><span class="sample">東京</span>方面はこちら</div>
+        <div class="sample btn"><span >大阪</span>方面はこちら</div>
+        <div class="sample btn"><span class="sample">九州</span>方面はこちら</div>
       </div>
     </main-contents>
   </main>
