--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,11 +1,11 @@
-<%= link_to "ここの情報を編集する", edit_place_path, method: :get %>
-<%= link_to "削除する", place_path, method: :delete  %>
-<%= link_to "トップページへ戻る" ,root_path %>
+<%= render "shared/header" %> 
 <div class="wrapper">
   <div class= "side-bar">
     <div class= "side-header">
       <div class="user-name">
+      <%= link_to  edit_user_path(current_user) do  %>
         <%= current_user.nickname%>
+      <% end %>
       </div>
       <div class="room-create">
         チャットに参加する
@@ -13,6 +13,10 @@
     </div>
     <div class= "rooms">
         <div class="room">
+          <%= @place.address%>
+          <%= @place.price%>
+          <%= @place.main_time%>
+          <%= @place.available_time%>
         </div>
     </div>
   </div>
@@ -20,8 +24,12 @@
   <div class = "main-chat">
     <div class="main-header">
       <div class="title">
+          <%= @place.name%>
       </div>
       <div class="exit">
+<%= link_to "ここの情報を編集する", edit_place_path(@place), method: :get %>
+<%= link_to "削除する", place_path(@place), method: :delete  %>
+<%= link_to "トップページへ戻る" ,root_path %>
       </div>
     </div>
     <div class="main-main">
