--- a/app/assets/stylesheets/messages/new.css
+++ b/app/assets/stylesheets/messages/new.css
@@ -85,16 +85,16 @@
   box-sizing: border-box;
 }
 
-.contents {
+.message-contents {
   padding:10px 0;
   margin:0 0 40px 0;
 }
 
-.content {
+.message-content {
   display:flex;
 }
 
-.name {
+.message-name {
   font-size:16px;
   color:#434a54;
   padding:0 10px 0 0 ;
