rootページのスタイリング編集

--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -14,7 +14,7 @@
       <div class="time-content">
       <div class="block">よく練習している時間</div>
         <%= f.time_select :main_time , class:"time" %>
-      <span>練習できる時間</span>
+      <span>利用可能時間</span>
         <%= f.time_select :available_time , class:"time" %>
       </div>
         <div>１時間当たりの金額</div>
