--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -16,9 +16,14 @@
       <% @places.each do |place|%>
       <div class= "practicePlace hidden"><%= place.address%></div>
       <div class= "practiceName hidden">
-        <%= link_to place_path(place.id), method: :get do%>
-          <%= place.name%></div>
+        <%= link_to place_path(place.id), method: :get do %>
+          <%= "#{place.name}の詳細"%></div>
         <% end %>
+      <div class= "practiceChat hidden">
+        <%= link_to new_place_message_path(place.id) , method: :get do %>
+          <%= "チャットページへ" %>
+        <% end %>
+      </div>
       <% end %>
       <div class="direction">
         <div class="sample btn" ><span class="sample">北海道</span>方面はこちら</div>
