--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/header" %> 
-  <main>
+  <div class="main">
     <div class="main-contents">
       <div class="place">練習場所一覧</div>
       <div id="target"></div>
@@ -10,7 +10,7 @@
         <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
         </div>
       </form>
-      <div>
+      <div class="new-place">
       <%= link_to "新規練習場所を作成する", new_place_path, method: :get%>
       </div>
       <% @places.each do |place|%>
@@ -33,7 +33,7 @@
         <div class="sample btn"><span class="sample">九州</span>方面はこちら</div>
       </div>
     </div>
-  </main>
+  </div>
   <footer>
     <div class="domain">(c)Maro</div>
   </footer>
