--- a/app/assets/stylesheets/messages/new.css
+++ b/app/assets/stylesheets/messages/new.css
@@ -31,6 +31,13 @@
   padding:14px;
 }
 
+.room-create > p {
+  border:1px solid red;
+  text-decoration:none;
+  color:red;
+  padding:10px;
+}
+
 .rooms {
   background-color:#2f3e51;
   height:calc(100% - 100px);
