--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -3,13 +3,13 @@
     <div class="main-contents">
       <div class="place">練習場所一覧</div>
       <div id="target"></div>
-      <form>
+      <div class= "search">
         <input type="text" id="address">
-        <button id="search">Search</button>
+        <p id="search">Search</p>
         <div id= about class= "hidden">
         <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
         </div>
-      </form>
+      </div>
       <div class="new-place">
       <%= link_to "新規練習場所を作成する", new_place_path, method: :get%>
       </div>
@@ -17,7 +17,7 @@
       <div class= "practicePlace hidden"><%= place.address%></div>
       <div class= "practiceName hidden">
         <%= link_to place_path(place.id), method: :get do %>
-          <%= "#{place.name}の詳細"%></div>
+          <%= "#{place.name}の詳細はこちら"%><br></div>
         <% end %>
       <div class= "practiceChat hidden">
         <%= link_to new_place_message_path(place.id) , method: :get do %>
