--- a/app/assets/stylesheets/places/show.css
+++ b/app/assets/stylesheets/places/show.css
@@ -1,156 +1,103 @@
-.wrapper {
-  display:flex;
-  height:100vh;
-}
-/* 左 */
-.side-bar {
-  background-color:#253141;
-  width:300px;
-}
-
-.side-header {
-  background-color:#253141;
-  height:100px;
-  padding:0 20px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.user-name > a {
-  color:#fafafa;
-  font-size:16px;
-  text-decoration:none;
-}
-
-.room-create > a {
-  color:deepskyblue;
-  font-size:10px;
-  text-decoration:none;
-  border:1px solid lightblue;
-  padding:14px;
-}
-
-.rooms {
-  background-color:#2f3e51;
-  height:calc(100% - 100px);
-  padding:0 20px;
-}
-
-.room {
-  padding:20px 0 40px;
-}
-
-.room > a {
-  color:white;
-  text-decoration:none;
-}
-
-/* 右 */
-.main-chat {
-  width:calc(100% - 300px);
-  background-color:#fff;
-}
-
-.main-header {
-  background:#fff;
-  height:100px;
-  padding:0 40px;
-  display:flex;
-  justify-content:space-between;
-}
-
-.title {
-  padding:36px 0 0;
-  font-size:24px;
-  color:#333;
-}
-
-.exit {
-  padding:40px 0 0;
-}
-
-.exit > a {
-  border:1px solid darkred;
-  text-decoration:none;
-  color:darkred;
-  padding:20px;
-}
-
-.main-main {
-  background-color:#fafafa;
-  height:calc(100% - 190px);
-  padding:46px 40px 0;
-  overflow: scroll;
-  box-sizing: border-box;
-}
-
-.contents {
-  padding:10px 0;
-  margin:0 0 40px 0;
-}
-
-.content {
-  display:flex;
-}
-
-.name {
-  font-size:16px;
-  color:#434a54;
-  padding:0 10px 0 0 ;
-}
-
-.created-at {
-  font-size:12px;
-  color:#999;
-}
-
-.text {
-  font-size:14px;
-  color:#434a54;
-
-}
-
-.form {
-  background-color:#ddd;
-  height:90px;
-  padding:20px 40px;
+.item-show {
+  background-color: #f8f8f8;
+  width: 100vw;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5vh 0;
 }
 
-.messages {
-  background-color: white;
+.item-box {
+  background-color: #FFF;
+  width: 70vw;
+  min-width: 1200px;
+  padding: 10vh 15vw;
   display: flex;
-  width: 100%;
+  flex-direction: column;
+  align-items: center;
 }
 
-.message {
-  border: none;
-  height: 50px;
-  width: 100%;
-  padding-left: 10px;
+.item-box>.name {
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
 }
 
-.commit {
-  background-color: #38AEF0;
-  border: none;
-  color: white;
+.item-box-img {
+  height: 50vh;
+  width: 60vw;
+  min-height: 500px;
+  background-color: rgb(205, 202, 202);
+  object-fit: contain;
+}
+
+.item-price-box {
+  margin: 25px 0px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.item-price-box>.item-price {
+  font-size: 4vh;
+  font-weight: bold;
+}
+
+.item-price-box>.item-postage {
   font-size: 16px;
-  height: 50px;
-  margin-left: 15px;
-  padding: 0 20px;
 }
 
-.form-image {
-  font-size: 12px;
-  background-color: lightblue;
-  color: white;
-  padding: 12px;
-  width: 60px;
-  margin: 5px 10px;
+
+.item-red-btn {
+  text-align: center;
+  background-color: #ea352d;
+  font-size: 24px;
+  font-weight: bold;
+  color: #FFF;
+  margin: 20px 0px;
+  padding: 2vh 10vw;
+}
+
+.or-text {
+  font-size: 20px;
+}
+
+.item-destroy {
+  background-color: lightgray;
+  text-align: center;
+  font-size: 24px;
+  color: black;
+  margin: 20px 0px;
+  padding: 2vh 10vw;
+}
+
+.item-explain-box {
+  font-size: 18px;
+  margin: 40px 0px;
+}
+
+.detail-table {
+  margin-bottom: 30px;
+  width: 100%;
+}
+
+.detail-item {
+  width: 20%;
+  background-color: #eee;
+  border: 1px solid #dedede;
+  font-size: 14px;
   text-align: center;
 }
 
-.hidden {
-  display: none;
+.detail-value {
+  width: 80%;
+  padding: 20px;
+  border: 1px solid #dedede;
+  font-size: 14px;
+}
+
+.option {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
 }
