--- a/app/assets/stylesheets/places/index.css
+++ b/app/assets/stylesheets/places/index.css
@@ -2,7 +2,6 @@
 .main {
   height: 600px;
   /* background-color: rgba(95, 158, 160, 0.39); */
-  background-color: hsla(30, 40%, 90%, 1.0);
   /* background-image: url(IMG_9797.JPG); */
   /* background-size: cover; */
   /* background-position: center; */
@@ -11,17 +10,39 @@
 
 .main-contents {
   height: 600px;
+  width:80%;
   display: flex;
   justify-content: center;
   flex-direction:column;
   align-items: center;
   margin:0 auto;
+  background-color: hsla(30, 40%, 90%, 1.0);
 }
+
+/* .place {
+  font-size:32px;
+  font-weight:bold;
+  padding:12px;
+} */
 
 .place {
   font-size:32px;
   font-weight:bold;
-  padding:12px;
+  position: relative;
+  padding:8px;
+  margin-bottom:24px;
+  text-align: center;
+}
+
+.place:before {
+  position: absolute;
+  bottom: -5px;
+  left: calc(50% - 30px);
+  width: 60px;
+  height: 5px;
+  content: '';
+  border-radius: 3px;
+  background: red;
 }
 
 #target {
