--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,17 +9,27 @@
         <div class="header-container-contents">
           <ul>
             <% if user_signed_in? %>
-            <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
-            <%= link_to  "ログアウト",  destroy_user_session_path, method: :delete %>
+            <div class="header-list">
+              <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
+            </div>
+            <div class="header-list">
+              <%= link_to  "ログアウト",  destroy_user_session_path, method: :delete %>
+            </div>
             <% else %>
-            <%= link_to "ログイン", new_user_session_path, method: :get %>
+            <div class="header-list">
+              <%= link_to "ログイン", new_user_session_path, method: :get %>
+            </div>
             <% end %>
-            <a href="about.html">
-              <li>about</li>
-            </a>
-            <a href="contact.html">
-              <li>contact</li>
-            </a>
+            <div class="header-list">
+              <a href="about.html">
+                <li>about</li>
+              </a>
+            </div>
+            <div class="header-list">
+              <a href="contact.html">
+                <li>contact</li>
+              </a>
+            </div>
           </ul>          
         </div>
       </div>
