--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -22,6 +22,7 @@
         <span class="span">¥</span>
         <%= f.text_field :price, placeholder:"例）300" ,class:"price" %>
       </div>
+      <%= f.file_field :image, class: 'message-image' %>
       <input name="place[user_ids][]" type="hidden" value=<%=current_user.id%>>
       <%= f.submit "新しい練習場所を登録する！" %>
       <%=link_to 'もどる', root_path%>
