--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,9 +10,6 @@
         <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
         </div>
       </div>
-      <div class="new-place">
-      <%= link_to "新規練習場所を作成する", new_place_path, method: :get%>
-      </div>
       <% @places.each do |place|%>
       <div class= "practicePlace hidden"><%= place.address%></div>
       <div class= "practiceName hidden">
@@ -34,18 +31,24 @@
       </div>
     </div>
     <div class="main-contents-right">
-      <div class="main-content-right">
-        <div class="explain-title">
+      <div class="main-content-right-upper">
+        <div class="upper-explain-title">
+        まだ知らない練習場所を見つけよう
+        </div>
+        <div class="explain-content">
+        マーカーをクリックして詳細情報を確認できます
+        </div>
+        <div class="explain-content">
         お気に入りの練習場所を見つけよう
         </div>
-        <ul>
-          <li class="explain-content">
-          マップ上のマーカーをクリックして詳細情報を確認できます
-          </li>
-          <li class="explain-content">
-          お気に入りの練習場所を見つけよう
-          </li>
-        <ul>
+      </div>
+      <div class="main-content-right-lower">
+        <div class="lower-explain-title">
+        新しい練習場所を共有しよう
+        </div>
+        <div class="new-place">
+          <%= link_to "新規練習場所を作成する", new_place_path, method: :get%>
+        </div>
       </div>
     </div>
   </div>
