--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -21,12 +21,6 @@
   /*background-color: hsla(30, 40%, 90%, 1.0);*/
 }
 
-/* .place {
-  font-size:32px;
-  font-weight:bold;
-  padding:12px;
-} */
-
 .place {
   font-size:32px;
   font-weight:bold;
@@ -53,6 +47,11 @@
   height: 400px;
 }
 
+a {
+  color: #000000;
+  text-decoration:none;
+}
+
 .search {
   padding:24px 0;
   display:block;
@@ -67,12 +66,12 @@
   cursor:pointer;
   display: inline-block;
   appearance: none;
-  border: 0;
   border-radius: 5px;
   background: #fd9535;
   color: #fff;
   padding: 8px 16px;
   font-size: 16px;
+  border:1px solid #fff;
 }
 
 #search:hover {
@@ -89,7 +88,7 @@
 
 .btn {
   width: 150px;
-  background: #3ccace;
+  background: #337079;
   text-align: center;
   border-radius: 4%;
   border:1px solid #fff;
@@ -98,6 +97,7 @@
   padding: 15px 0;
   margin-bottom:20px;
   cursor:pointer;
+  color:#FFF;
 }
 
 /* メインの右 */
@@ -146,11 +146,11 @@
   padding:0 8px;
   border-radius: 4%;
   border:1px solid #fff;
-  background-color:hsla(30, 70%, 70%, 1.0) ;
+  background-color: #fd9535;
   text-align: center;
 }
 
 .new-place > a {
-  color:black;
+  color:#fff;
   text-decoration:none;
 }
