--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,7 +3,11 @@
 <%= link_to "ここの情報を編集する", edit_place_path(@place.id), method: :get %>
 <%= link_to "削除する", place_path, method: :delete  %>
 <%= link_to "トップページへ戻る" ,root_path %>
-      <%= image_tag @place.image ,class:"item-box-img" %>
+<% if @place.image.attached?%>
+  <%= image_tag @place.image ,class:"item-box-img" %>
+<% else %>
+  <%= image_tag ("default_place.png") ,class:"item-box-img" %>
+<% end %>
 <%= %>
 <%= %>
 <%= %>
