--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -6,32 +6,50 @@
 <div class="wrapper">
   <div class= "side-bar">
     <div class= "side-header">
-      <div class="user-name">
-      <%= link_to  edit_user_path(current_user) do  %>
-        <%= current_user.nickname%>
-      <% end %>
-      </div>
-      <div class="room-create">
-      <%#ユーザーidと練習場所idが共に中間テーブルに存在しないならチャットに参加するを表示%>
-        <% unless @user_places.where(user_id: current_user, place_id: @place.id).exists? %>
-          <%= form_with model: [@user_place, @place], url: user_places_path, method: :post, local: true do |f| %>
-            <input name="user_place[user_id][]" type="hidden" value=<%=current_user.id%>>
-            <input name="user_place[place_id][]" type="hidden" value=<%=@place.id%>>
-            <%= f.submit "チャットに参加する" %>
-          <% end %>
-        <% else %>
-          <p>参加中</p>
+      <% if user_signed_in? %>
+        <div class="user-name">
+        <%= link_to  edit_user_path(current_user) do  %>
+          <%= current_user.nickname%>
         <% end %>
-      </div>
-    </div>
-    <div class= "rooms">
-        <div class="room">
-          <p>練習場所の住所 :  </p><p class= "place-info"><%= @place.address%></p>
-          <p>１時間当たりの金額 : </p><p class= "place-info"><%= @place.price%>円</p>
-          <p>よく練習している時間 : </p><p class= "place-info"><%= @place.main_time%></p>
-          <p>利用可能時間 : </p><p class= "place-info"><%= @place.available_time%></p>
-          <p>このチャットに参加している人数 : </p><p class= "place-info"><%= "#{@user_places.where(place_id: @place.id).count}人"%></p>
         </div>
+        <div class="room-create">
+        <%#ユーザーidと練習場所idが共に中間テーブルに存在しないならチャットに参加するを表示%>
+          <% unless @user_places.where(user_id: current_user, place_id: @place.id).exists? %>
+            <%= form_with model: [@user_place, @place], url: user_places_path, method: :post, local: true do |f| %>
+              <input name="user_place[user_id][]" type="hidden" value=<%=current_user.id%>>
+              <input name="user_place[place_id][]" type="hidden" value=<%=@place.id%>>
+              <div class="join">
+                <%= f.submit "チャットに参加する" %>
+              </div>
+            <% end %>
+          <% else %>
+            <p class="sanka">参加中</p>
+          <% end %>
+        </div>
+      <% else %>
+        <div class="new-session">
+          <%= link_to "ログインしてチャットに参加しよう", new_user_session_path %>
+        </div>
+      <% end %>
+    </div>
+    <div class= "place-contents">
+      <div class="place-content">
+        <div class="place-content-list">
+            <p>練習場所の住所 :  </p><p class= "place-info"><%= @place.address%></p>
+        </div>
+        <div class="place-content-list">
+            <p>１時間当たりの金額 : </p><p class= "place-info"><%= @place.price%>円</p>
+        </div>
+        <div class="place-content-list">
+            <p>よく練習している時間 : </p><p class= "place-info"><%= @place.main_time%></p>
+        </div>
+        <div class="place-content-list">
+            <p>利用可能時間 : </p><p class= "place-info"><%= @place.available_time%></p>
+        </div>
+        <div class="place-content-list">
+            <p>このチャットの参加人数 : </p><p class= "place-info"><%= "#{@user_places.where(place_id: @place.id).count}人"%></p>
+        </div>
+      </div>
     </div>
   </div>
 
