placesテーブルのカラム変更

--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,8 +1,7 @@
 <%= form_with model: @place, local: true do |f| %>
   <%= f.text_area :name, placeholder:"練習場所の名前（必須 40文字まで)", maxlength:"40" %>
   <%= f.text_area :address, placeholder:"練習場所の住所（必須 40文字まで)", maxlength:"40" %>
-  <%= f.time_select :main_time%>
-  <%= f.time_select :available_time %>
+  <%= f.text_area :remark, placeholder:"練習場所の住所（必須 40文字まで)", maxlength:"40" %>
   <%= f.text_field :price, placeholder:"例）300"  %><span>円</span>
   <%= f.submit "新しい練習場所を登録する！" %>
   <%=link_to 'もどる', root_path%>
