--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -65,12 +65,8 @@
           <td class="detail-value"><%= @place.address %></td>
         </tr>
         <tr>
-          <th class="detail-item">主な練習時間</th>
-          <td class="detail-value"><%= @place.main_time %></td>
-        </tr>
-        <tr>
-          <th class="detail-item">利用可能時間</th>
-          <td class="detail-value"><%= @place.available_time%></td>
+          <th class="detail-item">備考</th>
+          <td class="detail-value"><%= @place.remark %></td>
         </tr>
         <tr>
           <th class="detail-item">１時間当たりの金額</th>
