--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -101,15 +101,14 @@ a {
 }
 
 /* メインの右 */
-
 .main-contents-right {
   width:40%;
-  /*background-color:#DDD;*/
 }
 
+/* メインの右上 */
 .main-content-right-upper {
   width:85%;
-  height:75%;
+  height:35%;
   margin:0 auto;
 }
 
@@ -127,6 +126,90 @@ a {
   font-size: 20px;
 }
 
+/*メイン右中央部分*/
+.main-content-right-middle {
+  width:100%;
+  height:40%;
+  padding:0 10px;
+}
+.place-show {
+  display:flex;
+  width:100%;
+  height:100%;
+  border:1px solid #dedede;
+  background-color:rgba(0,0,0,0.3);
+}
+
+.place-show-left{
+  width:40%;
+  height:100%;
+  display:flex;
+  padding:20px 0;
+}
+
+.item-box {
+  height: 100%;
+  width: 80%;
+  background-color: rgba(0, 0, 0,0);
+  margin:0 auto;
+
+}
+.item-box-img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+.place-show-right{
+  width:60%;
+  display:flex;
+}
+
+.detail-table {
+  width: 80%;
+  height:100%;
+  padding:20px 0;
+  margin:0 auto;
+}
+
+.detail-item {
+  width: 20%;
+  height:20%;
+  background-color: #eee;
+  border: 1px solid #dedede;
+  font-size: 10px;
+  text-align: center;
+}
+
+.detail-value {
+  background-color: #337079;
+  width: 80%;
+  height:20%;
+  padding: 5px;
+  border: 1px solid #dedede;
+  font-size: 10px;
+  color:#FFF;
+}
+
+.detail-item-remark {
+  width: 20%;
+  height:40%;
+  background-color: #eee;
+  border: 1px solid #dedede;
+  font-size: 10px;
+  text-align: center;
+}
+
+.detail-value-remark {
+  background-color: #337079;
+  width: 80%;
+  height:40%;
+  padding: 5px;
+  border: 1px solid #dedede;
+  font-size: 10px;
+  color:#FFF;
+}
+
+/*メイン右下*/
 .main-content-right-lower {
   width:85%;
   height:25%;
@@ -150,7 +233,6 @@ a {
   text-align: center;
 }
 
-.new-place > a {
-  color:#fff;
-  text-decoration:none;
+.hidden {
+  display:none;
 }
