--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,13 +9,10 @@
       </div>
       <% @places.each do |place|%>
       <div class= "practicePlace hidden"><%= place.address%></div>
-      <div class= "practiceName hidden">
-        <%= link_to place_path(place.id), method: :get do %>
-          <%= "#{place.name}の詳細はこちら"%><br></div>
-        <% end %>
+      <div class= "practiceName hidden"></div>
       <div class= "practiceChat hidden">
         <%= link_to new_place_message_path(place.id) , method: :get do %>
-          <%= "チャットページへ" %>
+          <%= "#{place.name}のチャットページへ" %>
         <% end %>
       </div>
       <% end %>
