練習場所新規作成ページのビュー修正

--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -33,7 +33,7 @@
             備考欄
           </div>
           <div class="new-remark-form">
-            <%= f.text_area :address, placeholder:"よく練習している時間帯や施設の練習可能時間などの詳細などを記入ください", maxlength:"100" %>
+            <%= f.text_area :remark, placeholder:"よく練習している時間帯や施設の練習可能時間などの詳細などを記入ください", maxlength:"100" %>
           </div>
         </div>
         <div class="new-image">
@@ -51,3 +51,4 @@
     <% end %>
   </div>
 </div>
+<%= render "shared/footer" %> 
