--- a/app/assets/stylesheets/messages/new.css
+++ b/app/assets/stylesheets/messages/new.css
@@ -101,7 +101,7 @@
 }
 
 .main-header {
-  background:#fff;
+  background-color:rgba(51,112,121,5%);
   height:100px;
   padding:0 40px;
   display:flex;
@@ -128,7 +128,7 @@
 }
 
 .main-main {
-  background-color:#fafafa;
+  background-color:rgba(51,112,121,15%);
   height:calc(100% - 190px);
   padding:46px 40px 0;
   overflow: scroll;
@@ -166,7 +166,8 @@
 }
 
 .form {
-  background-color:#ddd;
+  /* background-color:#ddd; */
+    background-color:rgba(51,112,121,25%);
   height:90px;
   padding:20px 40px;
   display: flex;
