--- a/app/assets/stylesheets/places/new.css
+++ b/app/assets/stylesheets/places/new.css
@@ -136,10 +136,38 @@
 }
 
 .new-image-form {
-  padding:25px;
-  width:25%;
+  padding:25px 0;
+  margin:0 auto;
+  width:50%;
 }
 
-.new-image-form > image {
+.new-image-form > .image {
   width:100%;
+}
+
+.content > input {
+  color: #000;
+  background-color: #fff100;
+  border-bottom: 5px solid #ccc100;
+  margin-bottom:10px;
+}
+
+.content > input:hover {
+  margin-top: 3px;
+  color: #000;
+  background: #fff20a;
+  border-bottom: 2px solid #ccc100;
+}
+
+.content > a {
+  color: #000;
+  background-color:rgba(51,112,121,20%);
+  border-bottom: 5px solid rgba(51,112,121,40%);
+}
+
+.content > a:hover {
+  margin-top: 3px;
+  color: #000;
+  background-color:rgba(51,112,121,20%);
+  border-bottom: 2px solid rgba(51,112,121,40%);
 }
